--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<p>Para millones de personas de todo el mundo, Slack es donde el trabajo fluye.</p>
 				<p class="button2"><a href="">DESCUBRE POR QUÉ</a></p>
 			</div>
-			<!-- <div class="partners">
+			<div class="partners">
 				<div class="container2">
 				<figure>
 					<img src="images/Airbnb_Logo_Bélo.png" alt="">
@@ -57,7 +57,7 @@
 					<img src="images/Link_partners-Oracle-logo.png" alt="">
 				</figure>
 				</div>
-			</div> -->
+			</div>
 		</section>
 	</header>
 </body>
